<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calculator_fragment"
        android:contentDescription="@string/navigate_to_calculator"
        android:icon="@drawable/baseline_calculate_24"
        android:title="@string/calculator" />
    <item
        android:id="@+id/analysis_fragment"
        android:contentDescription="@string/navigate_to_analysis"
        android:icon="@drawable/baseline_query_stats_24"
        android:title="@string/analysis" />
    <item
        android:id="@+id/history_fragment"
        android:contentDescription="@string/navigate_to_history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history" />
    <item
        android:id="@+id/settings_fragment"
        android:contentDescription="@string/navigate_to_settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />
</menu>